library/general/gatewayclassnamespaces/example.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: prod-gateway
spec:
  gatewayClassName: prod-lb
  listeners:  # Use GatewayClass defaults for listener definition.
    - protocol: HTTP
      port: 80
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            env: prod
        namespaces:
          from: "All"
